--- a/templates/index.html
+++ b/templates/index.html
@@ -6,9 +6,7 @@
     <title>Voron Configurator</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <!-- Ace Editor -->
-    <script src="https://cdn.jsdelivr.net/npm/ace-builds@1.32.0/src-min-noconflict/ace.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/ace-builds@1.32.0/src-min-noconflict/ext-language_tools.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/monaco-editor/0.44.0/min/vs/loader.min.js"></script>
 </head>
 <body data-theme="arctic">
     <div class="app-container">
@@ -24,6 +22,9 @@
                     <select id="ldo-ref-config-select" class="config-select">
                         <option value="">-- LDO Reference --</option>
                     </select>
+                    <button id="load-ref-config-btn" class="btn btn-icon" title="Load Reference Config" disabled>
+                        <i class="fas fa-download"></i>
+                    </button>
                     <button id="open-ref-tab-btn" class="btn btn-icon" title="Open in New Tab" disabled>
                         <i class="fas fa-external-link-alt"></i>
                     </button>
