--- a/templates/index.html
+++ b/templates/index.html
@@ -29,6 +29,9 @@
                         <i class="fas fa-external-link-alt"></i>
                     </button>
                 </div>
+                <a href="/ldo-references" class="btn btn-icon" title="View All LDO Reference Configs">
+                    <i class="fas fa-book"></i>
+                </a>
                 <div class="theme-selector">
                     <i class="fas fa-palette"></i>
                     <select id="theme-select">
