--- a/templates/index.html
+++ b/templates/index.html
@@ -17,20 +17,9 @@
                 <span class="app-title">Voron Configurator</span>
             </div>
             <div class="top-bar-right">
-                <div class="reference-config-selector">
+                <a href="/ldo-references" class="ldo-link" title="View LDO Reference Configurations">
                     <i class="fas fa-book"></i>
-                    <select id="ldo-ref-config-select" class="config-select">
-                        <option value="">-- LDO Reference --</option>
-                    </select>
-                    <button id="load-ref-config-btn" class="btn btn-icon" title="Load Reference Config" disabled>
-                        <i class="fas fa-download"></i>
-                    </button>
-                    <button id="open-ref-tab-btn" class="btn btn-icon" title="Open in New Tab" disabled>
-                        <i class="fas fa-external-link-alt"></i>
-                    </button>
-                </div>
-                <a href="/ldo-references" class="btn btn-icon" title="View All LDO Reference Configs">
-                    <i class="fas fa-book"></i>
+                    <span>LDO Refs</span>
                 </a>
                 <div class="theme-selector">
                     <i class="fas fa-palette"></i>
