--- a/templates/ldo_references.html
+++ b/templates/ldo_references.html
@@ -131,7 +131,7 @@
         }
     </style>
 </head>
-<body data-theme="arctic">
+<body data-theme="arctic" style="overflow: auto; height: auto; min-height: 100vh;">
     <div class="reference-list-container">
         <a href="/" class="back-link">
             <i class="fas fa-arrow-left"></i>
